added posterior method

--- a/1d example.ipynb
+++ b/1d example.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "We define the observation model as:\n",
     "\n",
-    "$$ y = \\alpha  f + \\beta $$\n",
+    "$$ y = \\alpha  f(x) + \\beta $$\n",
     "\n",
     "i.e.\n",
     "\n",
@@ -143,6 +143,11 @@
     "        self.mu_b = nn.Parameter(torch.tensor(0.))\n",
     "        self.sigma_a = nn.Parameter(torch.tensor(1.))\n",
     "        self.sigma_b = nn.Parameter(torch.tensor(1.))\n",
+    "        \n",
+    "    def posterior(self, h):\n",
+    "        mu_ = mu(h, self.mu_a, self.mu_b)\n",
+    "        sigma2_ = sigma2(h, self.sigma_a, self.sigma_b)\n",
+    "        return Normal(mu_, sigma2_.sqrt())\n",
     "        \n",
     "        \n",
     "def criterion(h, y, priors):\n",
