Small code update

--- a/regression 1d-1d.ipynb
+++ b/regression 1d-1d.ipynb
@@ -123,10 +123,9 @@
     "        return mu_q + std * eps\n",
     "\n",
     "    def get_kl(self, mu_q, logvar_q):\n",
-    "        assert mu_q.dim() == 2\n",
-    "        batch_size = mu_q.size(0)\n",
+    "        \"\"\"KL from standard normal. Independent variables, shape is irrelevant, KL is summed over all dimensions.\"\"\"\n",
     "        kl = -0.5 * (1 + logvar_q - mu_q.pow(2) - logvar_q.exp())\n",
-    "        return kl.sum(1)  # now it's [1, 2], and we sum over variables\n"
+    "        return kl.sum()\n"
    ]
   },
   {
@@ -195,7 +194,7 @@
     "    recons = (0.5/logvar.exp() * expected_mse + 0.5*logvar)  # recons per example\n",
     "    recons = recons * N   # recons loss for whole data set\n",
     "    \n",
-    "    ## KL loss, either analytic and by MC\n",
+    "    ## KL loss, both analytic and by MC\n",
     "    kl_estimate = 0.5*expected_kl_term - 0.5*logvar_ab.sum()\n",
     "    kl = stochastic.get_kl(mu_ab, logvar_ab)\n",
     "    \n",
