--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -360,7 +360,7 @@
     "print(\"Cholesky:\\n\", make_cholesky(logvar_ab, cov_ab))\n",
     "\n",
     "logvar = nn.Parameter(torch.tensor(0.))  # for noise\n",
-    "optimiser = torch.optim.Adam(list(features.parameters()) + [mu_ab, logvar_ab, logvar], lr = l_rate)\n",
+    "optimiser = torch.optim.Adam(list(features.parameters()) + [mu_ab, logvar_ab, logvar, ], lr = l_rate)\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    optimiser.zero_grad()\n",
@@ -500,9 +500,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (venv-py3)",
    "language": "python",
-   "name": "python3"
+   "name": "venv-py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -514,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
