toy classification ML likelihood

--- a/classification-MNIST-covariance.ipynb
+++ b/classification-MNIST-covariance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,13 +258,13 @@
     "        std = (logvar_q/2).exp()\n",
     "        return mu_q + std * eps\n",
     "\n",
-    "    def get_kl(self, mu_q, logvar_q):\n",
-    "        \"\"\"KL from standard normal. Shape is irrelevant, KL is summed over all dimensions.\"\"\"\n",
+    "    def get_kl(self, mu_q, L_logdiag_q, L_q):\n",
     "        if not self.deterministic:\n",
-    "            kl = -0.5 * (1 + logvar_q - mu_q.pow(2) - logvar_q.exp())\n",
+    "            kl = -0.5 * (1 + L_logdiag_q - mu_q.pow(2) - torch.diag(L_q @ L_q.permute(1, 0)))\n",
+    "            #print(L_logdiag_q.sum().item(), mu_q.pow(2).sum().item(), torch.diag(L_q @ L_q.permute(1, 0)).sum().item())\n",
     "            return kl.sum()\n",
     "        else:\n",
-    "            0.\n"
+    "            return 0.\n"
    ]
   },
   {
@@ -287,25 +287,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 200 : loss 1.954 ELBO -1.954  Reconstruction 4.304843425750732  KL 0.005624102894216776   acc 0.151\n",
-      "step 400 : loss 1.457 ELBO -1.457  Reconstruction 7.5794525146484375  KL 0.005631292704492807   acc 0.233\n",
-      "step 600 : loss 1.270 ELBO -1.270  Reconstruction 8.499279022216797  KL 0.00564145902171731   acc 0.284\n",
-      "step 800 : loss 1.115 ELBO -1.115  Reconstruction 7.411723613739014  KL 0.005651971325278282   acc 0.336\n"
+      "Epoch 1  step 100 : loss 1431.338 ELBO -1431.338  Reconstruction 2.331  KL 338.670   acc 0.089\n",
+      "Epoch 1  step 200 : loss 1419.024 ELBO -1419.024  Reconstruction 2.309  KL 336.884   acc 0.119\n",
+      "Epoch 1  step 300 : loss 1415.056 ELBO -1415.056  Reconstruction 2.303  KL 335.484   acc 0.103\n",
+      "Epoch 1  step 400 : loss 1337.304 ELBO -1337.304  Reconstruction 2.139  KL 334.589   acc 0.192\n",
+      "Epoch 2  step 500 : loss 1290.278 ELBO -1290.278  Reconstruction 2.040  KL 334.128   acc 0.230\n",
+      "TEST epoch 2 step 500 : ELBO -2.143 Accuracy: 0.309\n"
      ]
     }
    ],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "deterministic = False\n",
     "last_layer_size = 32\n",
     "a_shape = (last_layer_size, n_classes)  # shape of stochastic weight matrix\n",
     "a_size = np.prod(a_shape)\n",
     "b_size = n_classes\n",
     "\n",
     "features = FeaturesExtractor(n_out=last_layer_size).to(device)\n",
-    "stochastic = CovarianceStochasticLayer().to(device)\n",
+    "stochastic = CovarianceStochasticLayer(deterministic).to(device)\n",
     "l_rate = 1e-4\n",
-    "epochs = 1000\n",
-    "n_samples = 10  # MC samples per example\n",
+    "epochs = 100\n",
+    "n_samples = 5  # MC samples per example\n",
     "n_parameters = a_size + b_size\n",
     "mu_ab = nn.Parameter(torch.zeros((n_parameters), device=device))  # for a and b\n",
     "\n",
@@ -319,61 +322,91 @@
     "\n",
     "optimiser = torch.optim.Adam(list(features.parameters()) + [mu_ab, logvar_ab, cov_ab_params], lr = l_rate)\n",
     "\n",
+    "def compute_elbo(x,t):\n",
+    "    batch_size = x.size(0)\n",
+    "    h = features(x)\n",
+    "    cov_ab = flat_to_triangular(cov_ab_params)\n",
+    "    L = make_cholesky(logvar_ab, cov_ab)\n",
     "\n",
+    "    # sample n_samples times a and b\n",
+    "    mu = mu_ab.unsqueeze(0).expand(n_samples, -1)\n",
+    "    L = make_cholesky(logvar_ab, cov_ab)\n",
+    "    ab_sample = stochastic(mu, L) \n",
+    "    a, b = ab_sample[:, :-b_size], ab_sample[:, -b_size:]\n",
+    "\n",
+    "    # reshape into [n_samples, *]\n",
+    "    a = a.unsqueeze(1).view(-1, *a_shape)\n",
+    "    b = b.unsqueeze(1)\n",
+    "\n",
+    "    # compute y of size [n_samples x batch_size x n_classes]\n",
+    "    y = h @ a + b   # stochasticity here only comes from a and b\n",
+    "\n",
+    "    # extend t and flatten \n",
+    "    t = t.unsqueeze(0).expand(n_samples, batch_size)\n",
+    "    t = t.contiguous().view(-1)\n",
+    "    y = y.contiguous().view(-1, n_classes)\n",
+    "\n",
+    "    # Reconstruction loss, estimated by MC\n",
+    "    recons = f.cross_entropy(y, t, reduction='none')\n",
+    "    recons = recons.view(n_samples, batch_size)\n",
+    "\n",
+    "    # Accuracy\n",
+    "    y = y.view(n_samples, batch_size, n_classes)\n",
+    "    t = t.view(n_samples, batch_size)\n",
+    "    pred_class = torch.max(y.detach(), dim=2)[1]   # tensor of indices\n",
+    "    acc = torch.mean((t==pred_class).float(), 0)\n",
+    "\n",
+    "    # KL loss, both analytic and by MC\n",
+    "    kl = stochastic.get_kl(mu_ab, logvar_ab, L)\n",
+    "\n",
+    "    # compute elbo and view as [n_samples x batch_size]\n",
+    "    elbo = - float(len(train_loader.dataset)) / batch_size * recons - kl \n",
+    "    elbo = elbo.view(n_samples, batch_size)\n",
+    "    \n",
+    "    return elbo, recons, kl, acc\n",
+    "    \n",
+    "\n",
+    "test_accs = []\n",
     "step = 0\n",
     "for epoch in range(1, epochs + 1):\n",
     "    features.train()\n",
     "    for batch_idx, (x, t) in enumerate(train_loader):\n",
     "        x, t = x.to(device), t.to(device)\n",
-    "        batch_size = x.size(0)\n",
     "        optimiser.zero_grad()\n",
-    "        h = features(x)\n",
-    "        cov_ab = flat_to_triangular(cov_ab_params)\n",
     "        \n",
-    "        # sample n_samples times a and b\n",
-    "        mu = mu_ab.unsqueeze(0).expand(n_samples, -1)\n",
-    "        L = make_cholesky(logvar_ab, cov_ab)\n",
-    "        ab_sample = stochastic(mu, L) \n",
-    "        a, b = ab_sample[:, :-b_size], ab_sample[:, -b_size:]\n",
-    "        \n",
-    "        # reshape into [n_samples, *]\n",
-    "        a = a.unsqueeze(1).view(-1, *a_shape)\n",
-    "        b = b.unsqueeze(1)\n",
-    "\n",
-    "        # compute y of size [n_samples x batch_size x n_classes]\n",
-    "        y = h @ a + b   # stochasticity here only comes from a and b\n",
-    "        \n",
-    "        # extend t and flatten \n",
-    "        t = t.unsqueeze(0).expand(n_samples, batch_size)\n",
-    "        t = t.contiguous().view(-1)\n",
-    "        y = y.contiguous().view(-1, n_classes)\n",
-    "        \n",
-    "        # Reconstruction loss, estimated by MC\n",
-    "        recons = f.cross_entropy(y, t, reduction='none')\n",
-    "\n",
-    "        # Accuracy\n",
-    "        pred_class = torch.max(y.detach(), dim=1)[1]   # tensor of indices\n",
-    "        acc = torch.mean((t==pred_class).float()).item()\n",
-    "\n",
-    "        # KL loss, both analytic and by MC\n",
-    "        kl = stochastic.get_kl(mu_ab, logvar_ab) / len(train_loader.dataset)\n",
-    "        \n",
-    "        \n",
-    "        # compute elbo and view as [n_samples x batch_size]\n",
-    "        elbo = - recons - kl\n",
-    "        elbo.view(n_samples, batch_size)\n",
+    "        elbo, recons, kl, acc = compute_elbo(x, t)\n",
     "\n",
     "        # IW averaging\n",
-    "        #elbo = elbo.mean() # \n",
-    "        elbo = log_sum_exp(elbo, dim=0, sum_op=torch.mean)\n",
+    "        elbo = elbo.mean() # \n",
+    "        # elbo = log_sum_exp(elbo, dim=0, sum_op=torch.mean)\n",
     "\n",
     "        loss = - elbo\n",
     "        loss.backward()\n",
     "        optimiser.step()\n",
     "        step += 1\n",
-    "        if step % 200 == 0:\n",
-    "            print(f'step {step} : loss {loss.item():.3f} ELBO {elbo.item():.3f}  Reconstruction '\n",
-    "                  f'{recons.mean().item()}  KL {kl.item()}   acc {acc:.3f}')\n"
+    "        if step % 100 == 0:\n",
+    "            print(f'Epoch {epoch}  step {step} : loss {loss.item():.3f} ELBO {elbo.item():.3f}  Reconstruction '\n",
+    "                  f'{recons.mean().item():.3f}  KL {kl.item():.3f}   acc {acc.mean().item():.3f}')\n",
+    "            \n",
+    "        if step % 500 == 0:\n",
+    "            with torch.no_grad():\n",
+    "                reconss = []\n",
+    "                accs = []\n",
+    "                for x, t in test_loader:\n",
+    "                    x, t = x.to(device), t.to(device)\n",
+    "                    elbo, recons, _, acc = compute_elbo(x, t)\n",
+    "                    reconss += [recons]\n",
+    "                    accs += [acc]\n",
+    "                reconss = torch.cat(reconss, 1)\n",
+    "                acc = torch.cat(accs, 0).mean().item()\n",
+    "                reconss = log_sum_exp(reconss, dim=0, sum_op=torch.mean).sum().item()\n",
+    "                elbo = -(reconss + kl)/len(test_loader.dataset)\n",
+    "                print(f\"TEST epoch {epoch} step {step} : ELBO {elbo:.3f} Accuracy: {acc:.3f}\")\n",
+    "                test_accs += [acc]\n",
+    "\n",
+    "                with open('mnist-covariance.txt', 'w') as fi:\n",
+    "                    for item in test_accs:\n",
+    "                        fi.write(\"%s\\n\" % item)"
    ]
   },
   {
