--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -459,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv-py3)",
+   "display_name": "Python [conda env:main]",
    "language": "python",
-   "name": "venv-py3"
+   "name": "conda-env-main-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
