Updated equations and text

--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -82,13 +82,18 @@
     "\\boldsymbol{\\Sigma} &= \\mathbf{L} \\mathbf{L}^T\\\\\n",
     "\\mathbf{y} & \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\boldsymbol{\\Sigma}) \\\\\n",
     "\\mathbf{y} &= \\boldsymbol{\\mu} + \\mathbf{L} \\boldsymbol{\\epsilon} \\\\\n",
-    "\\boldsymbol{\\epsilon} &\\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\mathbf{I})\n",
+    "\\boldsymbol{\\epsilon} &\\sim \\mathcal{N}(0, \\mathbf{I})\n",
     "\\end{align}\n",
     "\n",
-    "We can show that this indeed parametrizes the covariance $\\boldsymbol{\\Sigma}$ of $\\mathbf{y}$:\n",
+    "The mean of $\\mathbf{y}$ is trivially $\\boldsymbol{\\mu}$, while the covariance is indeed $\\boldsymbol{\\Sigma}$:\n",
     "\n",
-    "\\begin{aligned} \\boldsymbol{\\Sigma} &=\\mathbb{E}\\left[(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])^{T}\\right] \\\\ &=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ &=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ &=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ &=\\mathbf{L} \\mathbf{L}^{T} \\end{aligned}\n",
-    "\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{cov} (\\mathbf{y}) &=\\mathbb{E}\\left[(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])^{T}\\right] \\\\ \n",
+    "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ \n",
+    "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ \n",
+    "&=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ \n",
+    "&=\\mathbf{L} \\mathbf{L}^{T} = \\boldsymbol{\\Sigma}\n",
+    "\\end{aligned}\n",
     "\n",
     "The two terms we need to compute the ELBO are as follows:\n",
     "\n",
