--- a/classification-toyexample-covariance.ipynb
+++ b/classification-toyexample-covariance.ipynb
@@ -262,11 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Features extractor and stochastic layer\n",
-    "\n",
-    "Define function $f_{\\theta}$ to extract features $\\mathbf{h} = f_{\\theta}(x)$, with parameters $\\theta$ to be optimized. The features $\\mathbf{h}$ have size $m$, the weight matrix $\\mathbf{a}$ has shape $m \\times k$, the bias $\\mathbf{b}$ has size $k$, and $k$ is the number of classes. Logits are $\\mathbf{h \\cdot a} + \\mathbf{b}$, with $\\mathbf{a}$ and $\\mathbf{b}$ multivariate Normal rvs with full covariance (including correlation between $\\mathbf{a}$ and $\\mathbf{b}$).\n",
-    "\n",
-    "The stochastic layer has no state, it's only used to get samples from $\\mathcal{N}(\\mu, \\Sigma)$, and to compute the KL divergence from a prior $\\mathcal{N}(0, I)$ to a variational distribution $q = \\mathcal{N}(\\mu, \\Sigma)$."
+    "### Features extractor and stochastic layer\n"
    ]
   },
   {
@@ -329,11 +325,7 @@
     "\n",
     "Here we maximize the ELBO $\\mathcal{L}$ with respect to variational parameters $\\mu_a, \\sigma_a, \\mu_b, \\sigma_b$, the NN parameters $\\theta$, and the noise std $\\sigma$.\n",
     "\n",
-    "First train model with ML (no sampling, just train means), then compare with the Bayesian one.\n",
-    "\n",
-    "Things that seem to be important for the Bayesian model:\n",
-    "- large last layer: with many parameters, we can have a relatively small KL, so basically $q(\\mathbf{a}, \\mathbf{b})$ close to the prior, and still achieve good results.\n",
-    "- not too many data points: otherwise the KL weights too little and it tends to a ML setting where it overfits more easily."
+    "First train model with ML (no sampling, just train means), then compare with the Bayesian one."
    ]
   },
   {
