Justified multivariate KL expression on classification toy example

--- a/classification-toyexample-covariance.ipynb
+++ b/classification-toyexample-covariance.ipynb
@@ -114,6 +114,14 @@
     "\\end{split}\n",
     "where $N$ is the data set size.\n",
     "\n",
+    "Here we used the KL divergence between multivariate Gaussian distributions:\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{KL}(q\\ ||\\ p))\n",
+    "    &= \\frac{1}{2} \\left( \\log |\\boldsymbol{\\Sigma}_ p| - \\log |\\boldsymbol{\\Sigma}_ q| - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_p^{-1} \\boldsymbol{\\Sigma}_q) + (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)^T  \\boldsymbol{\\Sigma}_p (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)\\right) \\\\\n",
+    "    & = \\frac{1}{2} \\left( - \\log \\left(|\\boldsymbol{L}|^2\\right) - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_q) +  \\boldsymbol{\\mu}_q^T \\boldsymbol{\\mu}_q\\right) \\\\\n",
+    "    & = -\\frac{1}{2} \\left(D' + \\sum_{i=1}^{D'} \\log L_{ii}^2 - \\sum_{i=1}^{D'} (\\boldsymbol{\\Sigma}_q)_{ii} - \\sum_{i=1}^{D'} \\mu_i^2 \\right)\n",
+    "\\end{aligned}\n",
+    "\n",
     "### Papers\n",
     "\n",
     "[Gaussian variational approximation with a factor covariance structure](https://arxiv.org/pdf/1701.03208.pdf)\n",
