Justified multivariate KL expression on regression with covariance

--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
     "\n",
-    "In this context, $a$ is a vector of size $D$ and $b$ a scalar. We denote as $v$ the vector representing all the concatenated parameters $a$ and $b$. In this context, we choose to model the approximate posterior of $v$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by a Cholesky factor $\\mathbf{L}$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
+    "In this context, $a$ is a vector of size $D$ and $b$ a scalar. We denote as $v$ the vector representing all the concatenated parameters $a$ and $b$, with size $D'=D+1$. In this context, we choose to model the approximate posterior of $v$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by a Cholesky factor $\\mathbf{L}$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
     "\n",
     "\\begin{align}\n",
     "\\boldsymbol{\\Sigma} &= \\mathbf{L} \\mathbf{L}^T\\\\\n",
@@ -99,9 +99,17 @@
     "\n",
     "\\begin{split}\n",
     "\\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ a, b, \\mathbf{x} ; \\theta, \\sigma^2)] &=  \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\left[ -\\frac{1}{2} \\log \\sigma^2 - \\frac{1}{2\\sigma^2} [(t_i - a f_{\\theta}(x_i) - b)^2] + \\mathrm{const.} \\right] \\right] \\\\\n",
-    "\\mathrm{KL}(q(v) \\ ||\\ p(v)) &= -\\frac{1}{2} \\sum_{i=1}^d \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
+    "\\mathrm{KL}(q(v) \\ ||\\ p(v)) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
     "\\end{split}\n",
     "where $N$ is the data set size.\n",
+    "\n",
+    "Here we used the KL divergence between multivariate Gaussian distributions:\n",
+    "\\begin{aligned}\n",
+    "\\mathrm{KL}(q\\ ||\\ p))\n",
+    "    &= \\frac{1}{2} \\left( \\log |\\boldsymbol{\\Sigma}_ p| - \\log |\\boldsymbol{\\Sigma}_ q| - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_p^{-1} \\boldsymbol{\\Sigma}_q) + (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)^T  \\boldsymbol{\\Sigma}_p (\\boldsymbol{\\mu}_p - \\boldsymbol{\\mu}_q)\\right) \\\\\n",
+    "    & = \\frac{1}{2} \\left( - \\log \\left(|\\boldsymbol{L}|^2\\right) - D' + \\mathrm{tr} (\\boldsymbol{\\Sigma}_q) +  \\boldsymbol{\\mu}_q^T \\boldsymbol{\\mu}_q\\right) \\\\\n",
+    "    & = -\\frac{1}{2} \\left(D' + \\sum_{i=1}^{D'} \\log L_{ii}^2 - \\sum_{i=1}^{D'} (\\boldsymbol{\\Sigma}_q)_{ii} - \\sum_{i=1}^{D'} \\mu_i^2 \\right)\n",
+    "\\end{aligned}\n",
     "\n",
     "### Papers\n",
     "\n",
