A couple of notes on things we could think about before presentation

--- a/classification-toyexample-covariance.ipynb
+++ b/classification-toyexample-covariance.ipynb
@@ -118,7 +118,7 @@
     "\\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
     "\\end{split}\n",
     "\n",
-    "where $N$ is the data set size. Here we used the KL divergence between multivariate Gaussian distributions:\n",
+    "where $N$ is the data set size, and the expectation is estimated by MC. Here we used the KL divergence between multivariate Gaussian distributions:\n",
     "\n",
     "\\begin{aligned}\n",
     "\\mathrm{KL}(q\\ ||\\ p)\n",
@@ -133,7 +133,13 @@
     "\n",
     "[Pathwise Derivatives Beyond the Reparameterization Trick](https://arxiv.org/pdf/1806.01851.pdf)\n",
     "\n",
-    "[Berkley Kingma ppt](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)"
+    "[Berkley Kingma ppt](https://berkeley-deep-learning.github.io/cs294-131-s17/slides/VAE%20talk.compressed.pdf)\n",
+    "\n",
+    "\n",
+    "### Possible stuff to think about\n",
+    "\n",
+    "- variational distribution on _all_ network parameters?\n",
+    "- can we iteratively do SGD on the whole network and optimize analytically the last layer (at least in the regression case)?"
    ]
   },
   {
