Updated intro text on regression with covariance

--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -34,72 +34,78 @@
    "source": [
     "### Problem\n",
     "\n",
-    "We consider a regression problem with D-dimensional features $x$, scalar targets $t$ and unknown variance $\\sigma^2$. We wish to learn a bayesian linear model with learnt basis functions. \n",
+    "We consider a regression problem with $D$-dimensional features $\\mathbf{x}$, scalar targets $\\mathbf{t}$ and unknown variance $\\sigma^2$. We wish to learn a bayesian linear model with learnt basis functions. \n",
     "\n",
     "### Case of the known basis function\n",
     "\n",
-    "In the case of a known deterministic D-dimensional basis function $\\phi$, the likelihood is:\n",
+    "In the case of a known deterministic $D$-dimensional basis function $\\phi$, the likelihood of a data point $(x_i, t_i)$ is:\n",
     "\n",
     "\\begin{align}\n",
-    "p(t\\ |\\ a, b, x; \\sigma^2) & = \\mathcal{N}(a \\phi(x) + b, \\sigma^2) \n",
+    "p(t_i \\ |\\ \\mathbf{a}, b, x_i; \\sigma^2) & = \\mathcal{N}(\\mathbf{a} \\phi(x_i) + b, \\sigma^2) \n",
     "\\end{align}\n",
     "\n",
-    "We define the prior over the parameters as an isotropic Gaussian, which gives:\n",
+    "We define the prior over the parameters as an isotropic Gaussian:\n",
     "\n",
     "\\begin{align}\n",
-    " p(a) = \\mathcal{N}(0,1) \\qquad  p(b) = \\mathcal{N}(0,1)\n",
+    " p(\\mathbf{a}) = \\mathcal{N}(0,\\mathbf{I}) \\qquad  p(b) = \\mathcal{N}(0,1)\n",
     "\\end{align}\n",
     "\n",
-    "It is then possible to compute the posterior of parameters analytically, given $(\\mathbf{x}, \\mathbf{t})$ the entire dataset:\n",
+    "The posterior of the parameters, with $(\\mathbf{x}, \\mathbf{t})$ the entire dataset, is:\n",
     "\n",
     "\\begin{align}\n",
-    "p(a,b |\\mathbf{t} , \\mathbf{x}; \\sigma^2) = \\frac{p(\\mathbf{t} | a, b, \\mathbf{x}; \\sigma^2) p(a,b)}{p(\\mathbf{t} | \\mathbf{x}; \\sigma^2)}\n",
+    "p(\\mathbf{a},b \\ |\\ \\mathbf{t} , \\mathbf{x}; \\sigma^2) = \\frac{p(\\mathbf{t} \\ |\\  \\mathbf{a}, b, \\mathbf{x}; \\sigma^2) p(\\mathbf{a},b)}{p(\\mathbf{t}\\ |\\ \\mathbf{x}; \\sigma^2)}\n",
     "\\end{align}\n",
     "\n",
-    "The denominator $p(\\mathbf{t} | \\mathbf{x}; \\sigma^2)$ is tractable and constant, hence we can also approximate the posterior using our favorite MCMC methods.\n",
+    "The denominator $p(\\mathbf{t} \\ |\\ \\mathbf{x}; \\sigma^2)$ is tractable and constant, hence we can also approximate the posterior using our favorite MCMC methods.\n",
     "\n",
     "\n",
     "### Learnt basis function\n",
     "\n",
     "#### Bayes by Backprop\n",
     "\n",
-    "We take as basis function $f_\\theta$ a NN parameterized by $\\theta$. We optimize $\\theta$ and $\\sigma^2$ using maximum likelihood and $a, b$ using Variational Inference, which allows us to derive a lower bound of the marginal log likelihood (with regards to $a,b$) that we can optimize end-to-end. We have:\n",
+    "Let $\\mathbf{w}$ be the vector with all the parameters $\\mathbf{a}$ and $b$, having size $D' = D+1$. As basis function we use $f_\\theta$, a neural network parameterized by a vector $\\theta$. This effectively corresponds to a neural network where the last layer is Bayesian.\n",
+    "\n",
+    "We approximate the posterior parameter distribution $p(\\mathbf{w} \\ |\\ \\mathcal{D})$ with\n",
+    "\n",
+    "$$q(\\mathbf{w}) = \\mathcal{N}(\\boldsymbol{\\mu}_{\\mathbf{w}}, \\boldsymbol{\\Sigma}_{\\mathbf{w}})$$\n",
+    "\n",
+    "and optimize this distribution with variational inference, whereas $\\theta$ and $\\sigma^2$ are estimated by maximum likelihood. We do this by deriving a lower bound of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\sigma^2$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $ \\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
     "\n",
     "\\begin{align}\n",
-    "\\log p(\\mathbf{t} | \\mathbf{x}; \\sigma^2, \\theta) & = \\log \\int_{a,b} p(\\mathbf{t}, a, b | \\mathbf{x}; \\sigma^2, \\theta) dadb \\\\\n",
-    "& = \\log \\int_{a,b} p(\\mathbf{t} | a, b, \\mathbf{x}; \\sigma^2, \\theta)p(a,b) dadb \\\\\n",
-    "& = \\log \\int_{a,b} q(a,b) p(\\mathbf{t} | a, b, \\mathbf{x}; \\sigma^2, \\theta) \\frac{p(a,b)}{q(a,b)} dadb \\\\\n",
-    "& \\geq \\mathbb{E}_{q(a,b)} \\left[ \\log  p(\\mathbf{t} | a, b, \\mathbf{x}; \\sigma^2, \\theta) \\frac{p(a,b)}{q(a,b)} \\right] \\\\\n",
-    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ a, b, \\mathbf{x}; \\theta, \\sigma^2)] - \\mathrm{KL}(q(a,b) \\ ||\\ p(a,b)) \\\\\n",
-    "&= \\mathcal{L (t, x)}\n",
+    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{a},b} p(\\mathbf{t}, \\mathbf{a}, b | \\mathbf{x};  \\theta) d\\mathbf{a} db \\\\\n",
+    "& = \\log \\int_{\\mathbf{a},b} p(\\mathbf{t} | \\mathbf{a}, b, \\mathbf{x};  \\theta)p(\\mathbf{a},b) d\\mathbf{a} d\\mathbf{b} \\\\\n",
+    "& = \\log \\int_{\\mathbf{a},b} q(\\mathbf{a},b) p(\\mathbf{t} | \\mathbf{a}, b, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{a},b)}{q(\\mathbf{a},b)} d\\mathbf{a} db \\\\\n",
+    "& \\geq \\mathbb{E}_{q(\\mathbf{a},b)} \\left[ \\log  p(\\mathbf{t} | \\mathbf{a},b, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{a},b)}{q(\\mathbf{a},b)} \\right] \\\\\n",
+    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{a},b, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{a},b) \\ ||\\ p(\\mathbf{a},b)) \\\\\n",
+    "&= \\mathcal{L (\\mathbf{t},\\mathbf{x})}\n",
     "\\end{align}\n",
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
     "\n",
-    "In this context, $a$ is a vector of size $D$ and $b$ a scalar. We denote as $v$ the vector representing all the concatenated parameters $a$ and $b$, with size $D'=D+1$. In this context, we choose to model the approximate posterior of $v$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by a Cholesky factor $\\mathbf{L}$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
+    "We choose to model the approximate posterior of $\\mathbf{w}$ using a **Multivariate Gaussian** where the covariance matrix $\\boldsymbol{\\Sigma}$ is parametrized by using the Cholesky decomposition $\\boldsymbol{\\Sigma}=\\mathbf{L}\\mathbf{L}^T$, which allows us to apply the reparametrization trick [[Pathwise Derivatives Beyond the Reparameterization Trick]](https://arxiv.org/pdf/1806.01851.pdf):\n",
     "\n",
     "\\begin{align}\n",
-    "\\boldsymbol{\\Sigma} &= \\mathbf{L} \\mathbf{L}^T\\\\\n",
-    "\\mathbf{y} & \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\boldsymbol{\\Sigma}) \\\\\n",
-    "\\mathbf{y} &= \\boldsymbol{\\mu} + \\mathbf{L} \\boldsymbol{\\epsilon} \\\\\n",
-    "\\boldsymbol{\\epsilon} &\\sim \\mathcal{N}(0, \\mathbf{I})\n",
+    "\\mathbf{w} = \\boldsymbol{\\mu} + \\mathbf{L} \\boldsymbol{\\epsilon}, \\quad \n",
+    "\\boldsymbol{\\epsilon} \\sim \\mathcal{N}(0, \\mathbf{I}) \\quad \\Rightarrow \\quad\n",
+    "\\mathbf{w} \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\boldsymbol{\\Sigma})\n",
     "\\end{align}\n",
     "\n",
-    "The mean of $\\mathbf{y}$ is trivially $\\boldsymbol{\\mu}$, while the covariance is indeed $\\boldsymbol{\\Sigma}$:\n",
+    "where we can easily see that the mean of $\\mathbf{w}$ is $\\boldsymbol{\\mu}$, and the covariance is indeed $\\boldsymbol{\\Sigma}$:\n",
     "\n",
     "\\begin{aligned}\n",
-    "\\mathrm{cov} (\\mathbf{y}) &=\\mathbb{E}\\left[(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])(\\mathbf{y}-\\mathbb{E}[\\mathbf{y} ])^{T}\\right] \\\\ \n",
+    "\\mathrm{cov} (\\mathbf{w}) &=\\mathbb{E}\\left[(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])(\\mathbf{w}-\\mathbb{E}[\\mathbf{w} ])^{T}\\right] \\\\ \n",
     "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon}(\\mathbf{L} \\boldsymbol{\\epsilon})^{T}\\right] \\\\ \n",
     "&=\\mathbb{E}\\left[\\mathbf{L} \\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T} \\mathbf{L}^{T}\\right] \\\\ \n",
     "&=\\mathbf{L} \\mathbb{E}\\left[\\boldsymbol{\\epsilon} \\boldsymbol{\\epsilon}^{T}\\right] \\mathbf{L}^{T} \\\\ \n",
     "&=\\mathbf{L} \\mathbf{L}^{T} = \\boldsymbol{\\Sigma}\n",
     "\\end{aligned}\n",
     "\n",
+    "\n",
     "The two terms we need to compute the ELBO are as follows:\n",
     "\n",
     "\\begin{split}\n",
-    "\\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ a, b, \\mathbf{x} ; \\theta, \\sigma^2)] &=  \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\left[ -\\frac{1}{2} \\log \\sigma^2 - \\frac{1}{2\\sigma^2} [(t_i - a f_{\\theta}(x_i) - b)^2] + \\mathrm{const.} \\right] \\right] \\\\\n",
-    "\\mathrm{KL}(q(v) \\ ||\\ p(v)) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
+    "\\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{a}, b, \\mathbf{x} ; \\theta, \\sigma^2)] &=  \\mathbb{E}_q \\left[ \\sum_{i = 1}^N \\left[ -\\frac{1}{2} \\log \\sigma^2 - \\frac{1}{2\\sigma^2} [(t_i - \\mathbf{a} f_{\\theta}(x_i) - b)^2] + \\mathrm{const.} \\right] \\right] \\\\\n",
+    "\\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) &= -\\frac{1}{2} \\sum_{i=1}^{D'} \\left(1 + \\log L_{i,i}^2 - \\mu_i^2 - \\Sigma_{i,i}\\right)\n",
     "\\end{split}\n",
     "where $N$ is the data set size.\n",
     "\n",
