--- a/classification-toyexample-covariance.ipynb
+++ b/classification-toyexample-covariance.ipynb
@@ -82,12 +82,12 @@
     "and optimize this distribution with variational inference, whereas $\\theta$ is estimated by maximum likelihood. We do this by deriving a lower bound of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $ \\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
     "\n",
     "\\begin{align}\n",
-    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{a},\\mathbf{b}} p(\\mathbf{t}, \\mathbf{a}, \\mathbf{b} | \\mathbf{x};  \\theta) d\\mathbf{a} d\\mathbf{b} \\\\\n",
-    "& = \\log \\int_{\\mathbf{a},\\mathbf{b}} p(\\mathbf{t} | \\mathbf{a}, \\mathbf{b}, \\mathbf{x};  \\theta)p(\\mathbf{a},\\mathbf{b}) d\\mathbf{a} d\\mathbf{b} \\\\\n",
-    "& = \\log \\int_{\\mathbf{a},\\mathbf{b}} q(\\mathbf{a},\\mathbf{b}) p(\\mathbf{t} | \\mathbf{a}, \\mathbf{b}, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{a},\\mathbf{b})}{q(\\mathbf{a},\\mathbf{b})} d\\mathbf{a} d\\mathbf{b} \\\\\n",
-    "& \\geq \\mathbb{E}_{q(\\mathbf{a},\\mathbf{b})} \\left[ \\log  p(\\mathbf{t} | \\mathbf{a},\\mathbf{b}, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{a},\\mathbf{b})}{q(\\mathbf{a},\\mathbf{b})} \\right] \\\\\n",
-    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{a},\\mathbf{b}, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{a},\\mathbf{b}) \\ ||\\ p(\\mathbf{a},\\mathbf{b})) \\\\\n",
-    "&= \\mathcal{L (\\mathbf{t},\\mathbf{x})}\n",
+    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t}, \\mathbf{w} \\ |\\  \\mathbf{x};  \\theta) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta)p(\\mathbf{w}) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} q(\\mathbf{w}) p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} d\\mathbf{w} \\\\\n",
+    "& \\geq \\mathbb{E}_{q(\\mathbf{w})} \\left[ \\log  p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} \\right] \\\\\n",
+    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) \\\\\n",
+    "&= \\mathcal{L (q,\\theta)}\n",
     "\\end{align}\n",
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
