--- a/regression Nd-1d-Covariance.ipynb
+++ b/regression Nd-1d-Covariance.ipynb
@@ -72,12 +72,12 @@
     "and optimize this distribution with variational inference, whereas $\\theta$ and $\\sigma^2$ are estimated by maximum likelihood. We do this by deriving a lower bound of the marginal log likelihood that we can optimize end-to-end with respect to $\\theta$, $\\sigma^2$, $\\boldsymbol{\\mu}_{\\mathbf{w}}$, and $ \\boldsymbol{\\Sigma}_{\\mathbf{w}}$. We have:\n",
     "\n",
     "\\begin{align}\n",
-    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{a},b} p(\\mathbf{t}, \\mathbf{a}, b | \\mathbf{x};  \\theta) d\\mathbf{a} db \\\\\n",
-    "& = \\log \\int_{\\mathbf{a},b} p(\\mathbf{t} | \\mathbf{a}, b, \\mathbf{x};  \\theta)p(\\mathbf{a},b) d\\mathbf{a} d\\mathbf{b} \\\\\n",
-    "& = \\log \\int_{\\mathbf{a},b} q(\\mathbf{a},b) p(\\mathbf{t} | \\mathbf{a}, b, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{a},b)}{q(\\mathbf{a},b)} d\\mathbf{a} db \\\\\n",
-    "& \\geq \\mathbb{E}_{q(\\mathbf{a},b)} \\left[ \\log  p(\\mathbf{t} | \\mathbf{a},b, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{a},b)}{q(\\mathbf{a},b)} \\right] \\\\\n",
-    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{a},b, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{a},b) \\ ||\\ p(\\mathbf{a},b)) \\\\\n",
-    "&= \\mathcal{L (\\mathbf{t},\\mathbf{x})}\n",
+    "\\log p(\\mathbf{t} | \\mathbf{x};\\theta) & = \\log \\int_{\\mathbf{w}} p(\\mathbf{t}, \\mathbf{w} \\ |\\  \\mathbf{x};  \\theta) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta)p(\\mathbf{w}) d\\mathbf{w} \\\\\n",
+    "& = \\log \\int_{\\mathbf{w}} q(\\mathbf{w}) p(\\mathbf{t} \\ |\\  \\mathbf{w}, \\mathbf{x};  \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} d\\mathbf{w} \\\\\n",
+    "& \\geq \\mathbb{E}_{q(\\mathbf{w})} \\left[ \\log  p(\\mathbf{t} \\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta) \\frac{p(\\mathbf{w})}{q(\\mathbf{w})} \\right] \\\\\n",
+    "& = \\mathbb{E}_q[\\log p(\\mathbf{t}\\ |\\ \\mathbf{w}, \\mathbf{x}; \\theta)] - \\mathrm{KL}(q(\\mathbf{w}) \\ ||\\ p(\\mathbf{w})) \\\\\n",
+    "&= \\mathcal{L (q,\\theta, \\sigma^2)}\n",
     "\\end{align}\n",
     "\n",
     "#### Modelling the posterior of vector quantities with covariance\n",
